--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
     <title>Rock, Paper, Scissors</title>
   </head>
   <body>
+    <div id="container">
+      <button id="rock" class="button">Rock</button>
+      <button id="paper" class="button">Paper</button>
+      <button id="scissors" class="button">Scissors</button>
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
