--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       <button id="paper" class="button">Paper</button>
       <button id="scissors" class="button">Scissors</button>
     </div>
+    <div id="results-container">
+      <p id="round-winner"></p>
+      <p id="current-score"></p>
+    </div>
     <script src="./script.js"></script>
   </body>
 </html>
